--- a/artikel/detail_baca.html
+++ b/artikel/detail_baca.html
@@ -5,16 +5,17 @@
     <title>Membangun Kebiasaan Membaca untuk Menulis Lebih Baik</title>
   </head>
   <body>
+    <img src="OIP.jpg" alt="Cover Artikel" style="width: 100%; height: auto" />
     <header>
       <h1>Membangun Kebiasaan Membaca untuk Menulis Lebih Baik</h1>
       <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
       <img
         src="foto.jpg"
-        alt="Foto Penulis"
+        alt="Foto Author"
         width="70"
-        style="border-radius: 50%"
+        height="70"
+        style="border-radius: 50%; object-fit: cover"
       />
-      <a href="index.html">← Kembali ke Beranda</a>
       <hr />
     </header>
 
@@ -41,6 +42,45 @@
         Kata-kata akan lebih mudah mengalir karena otak terbiasa dengan ritme
         bahasa dan alur cerita.
       </p>
+
+      <h3>Label:</h3>
+      <ul>
+        <li>Membaca</li>
+        <li>Inspirasi</li>
+        <li>Kreativitas</li>
+      </ul>
+
+      <h3>Deskripsi Blog:</h3>
+      <p>
+        Artikel ini menyoroti peran membaca sebagai sumber ide, kosakata, dan
+        inspirasi penting bagi seorang penulis.
+      </p>
+
+      <h3>Tinggalkan Komentar</h3>
+      <form>
+        <label>Nama:</label><br />
+        <input type="text" name="nama" /><br /><br />
+
+        <label>Komentar:</label><br />
+        <textarea name="komentar" rows="5" cols="40"></textarea><br /><br />
+
+        <button type="submit">Kirim</button>
+      </form>
+
+      <h3>Komentar Pembaca</h3>
+      <p>
+        <img src="badut.jpg" alt="User 9" width="40" height="40" /><br />
+        <strong>Tono</strong><br />
+        Saya jadi lebih semangat membaca buku setelah membaca artikel ini.
+      </p>
+      <p>
+        <img src="jurnal.jpg" alt="User 10" width="40" height="40" /><br />
+        <strong>Maya</strong><br />
+        Benar sekali, membaca sangat membantu memperkaya tulisan kita.
+      </p>
+
+      <hr />
+      <a href="blog.html">← Kembali ke Beranda</a>
     </article>
   </body>
 </html>
