--- a/artikel/detail_gaya.html
+++ b/artikel/detail_gaya.html
@@ -5,16 +5,21 @@
     <title>Mengembangkan Gaya Menulis Sendiri</title>
   </head>
   <body>
+    <img
+      src="jurnal.jpg"
+      alt="Cover Artikel"
+      style="width: 100%; height: auto"
+    />
     <header>
       <h1>Mengembangkan Gaya Menulis Sendiri</h1>
       <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
       <img
         src="foto.jpg"
-        alt="Foto Penulis"
+        alt="Foto Author"
         width="70"
-        style="border-radius: 50%"
+        height="70"
+        style="border-radius: 50%; object-fit: cover"
       />
-      <a href="blog.html">← Kembali ke Beranda</a>
       <hr />
     </header>
 
@@ -41,6 +46,45 @@
         Yang terpenting, jangan takut berbeda. Gaya menulis yang autentik justru
         membuat tulisan kita memiliki daya tarik tersendiri bagi pembaca.
       </p>
+
+      <h3>Label:</h3>
+      <ul>
+        <li>Gaya Menulis</li>
+        <li>Kreativitas</li>
+        <li>Ekspresi</li>
+      </ul>
+
+      <h3>Deskripsi Blog:</h3>
+      <p>
+        Artikel ini membahas cara menemukan gaya menulis pribadi melalui
+        kebiasaan membaca, berlatih menulis, dan mengeksplorasi ekspresi diri.
+      </p>
+
+      <h3>Tinggalkan Komentar</h3>
+      <form>
+        <label>Nama:</label><br />
+        <input type="text" name="nama" /><br /><br />
+
+        <label>Komentar:</label><br />
+        <textarea name="komentar" rows="5" cols="40"></textarea><br /><br />
+
+        <button type="submit">Kirim</button>
+      </form>
+
+      <h3>Komentar Pembaca</h3>
+      <p>
+        <img src="anonim.jpg" alt="User 7" width="40" height="40" /><br />
+        <strong>Dewi</strong><br />
+        Saya jadi lebih percaya diri untuk menulis dengan gaya sendiri.
+      </p>
+      <p>
+        <img src="alim.png" alt="User 8" width="40" height="40" /><br />
+        <strong>Raka</strong><br />
+        Artikel ini membuka mata saya tentang pentingnya eksplorasi gaya.
+      </p>
+
+      <hr />
+      <a href="blog.html">← Kembali ke Beranda</a>
     </article>
   </body>
 </html>
