--- a/artikel/detail_writer_block.html
+++ b/artikel/detail_writer_block.html
@@ -5,16 +5,21 @@
     <title>Cara Mengatasi Writer's Block</title>
   </head>
   <body>
+    <img
+      src="buku pohon.jpg"
+      alt="Cover Artikel"
+      style="width: 100%; height: auto"
+    />
     <header>
       <h1>Cara Mengatasi Writer's Block</h1>
       <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
       <img
         src="foto.jpg"
-        alt="Foto Penulis"
+        alt="Foto Author"
         width="70"
-        style="border-radius: 50%"
+        height="70"
+        style="border-radius: 50%; object-fit: cover"
       />
-      <a href="blog.html">← Kembali ke Beranda</a>
       <hr />
     </header>
 
@@ -41,6 +46,42 @@
         jangan menyerah. Writer’s block adalah bagian dari proses kreatif yang
         bisa dilalui.
       </p>
+
+      <h3>Label:</h3>
+      <ul>
+        <li>Menulis</li>
+        <li>Produktivitas</li>
+        <li>Motivasi</li>
+      </ul>
+
+      <h3>Deskripsi Blog:</h3>
+      <p>
+        Artikel ini membahas cara sederhana menghadapi writer’s block, mulai
+        dari mengambil jeda, menulis bebas, hingga menjaga rutinitas.
+      </p>
+
+      <h3>Tinggalkan Komentar</h3>
+      <form>
+        <label>Komentar:</label><br />
+        <textarea name="komentar" rows="5" cols="40"></textarea><br /><br />
+
+        <button type="submit">Kirim</button>
+      </form>
+
+      <h3>Komentar Pembaca</h3>
+      <p>
+        <img src="cowok.png" alt="User 3" width="40" height="40" /><br />
+        <strong>Budi</strong><br />
+        Saya sering mengalami writer’s block, tips ini sangat membantu.
+      </p>
+      <p>
+        <img src="inon.jpg" alt="User 4" width="40" height="40" /><br />
+        <strong>Phainon</strong><br />
+        love you
+      </p>
+
+      <hr />
+      <a href="blog.html">← Kembali ke Beranda</a>
     </article>
   </body>
 </html>
