--- a/form-pendaftaran.html
+++ b/form-pendaftaran.html
@@ -17,8 +17,8 @@
 
     <form action="#" method="post">
       <p>
-        <label
-          >Nama Lengkap:<br />
+        <label>
+          Nama Lengkap:<br />
           <input type="text" name="nama_lengkap" required />
         </label>
       </p>
@@ -30,15 +30,15 @@
       </p>
 
       <p>
-        <label
-          >Tempat Lahir:<br />
+        <label>
+          Tempat Lahir:<br />
           <input type="text" name="tempat_lahir" />
         </label>
       </p>
 
       <p>
-        <label
-          >Tanggal Lahir:<br />
+        <label>
+          Tanggal Lahir:<br />
           <input type="date" name="tanggal_lahir" />
         </label>
       </p>
@@ -56,12 +56,28 @@
         <label
           ><input type="checkbox" name="hobi" value="Menulis" /> Menulis</label
         >
+        <br />
+        <label>
+          <input type="checkbox" name="hobi" value="Lainnya" /> Lainnya:
+          <input
+            type="text"
+            name="hobi_lainnya"
+            placeholder="Tulis hobi lain"
+          />
+        </label>
       </p>
 
       <p>
-        <label
-          >Password:<br />
-          <input type="password" name="password" />
+        <label>
+          Password:<br />
+          <input type="password" name="password" required />
+        </label>
+      </p>
+
+      <p>
+        <label>
+          Konfirmasi Password:<br />
+          <input type="password" name="konfirmasi_password" required />
         </label>
       </p>
 
