--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@
   <body>
     <!-- Navigasi -->
     <nav>
-      <a href="blog.html">Blog</a> |
+      <a href="index.html">Blog</a> |
       <a href="form-pendaftaran.html">Form Pendaftaran</a> |
       <a href="tabel-nilai.html">Tabel Nilai</a> |
       <a href="cv.html">Curriculum Vitae</a>
