--- a/detail_konsistensi.html
+++ b/detail_konsistensi.html
@@ -88,7 +88,7 @@
       </p>
 
       <hr />
-      <a href="blog.html">← Kembali ke Beranda</a>
+      <a href="index.html">← Kembali ke Beranda</a>
     </article>
   </body>
 </html>
