--- a/form-pendaftaran.html
+++ b/form-pendaftaran.html
@@ -8,7 +8,7 @@
     <h1>Form Pendaftaran</h1>
 
     <nav>
-      <a href="blog.html">Blog</a> |
+      <a href="index.html">Blog</a> |
       <a href="form-pendaftaran.html">Form Pendaftaran</a> |
       <a href="tabel-nilai.html">Tabel Perolehan Nilai</a> |
       <a href="cv.html">Curriculum Vitae</a>
