--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <!-- Navigasi -->
       <nav>
-        <a href="blog.html">Blog</a> |
+        <a href="index.html">Blog</a> |
         <a href="form-pendaftaran.html">Form Pendaftaran</a> |
         <a href="tabel-nilai.html">Tabel Perolehan Nilai</a> |
         <a href="cv.html">Curriculum Vitae</a>
