--- a/detail/detail_baca.html
+++ b/detail/detail_baca.html
@@ -10,7 +10,7 @@
       <h1>Membangun Kebiasaan Membaca untuk Menulis Lebih Baik</h1>
       <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
       <img
-        src="foto.jpg"
+        src="aset/foto.jpg"
         alt="Foto Author"
         width="70"
         height="70"
