--- a/detail/detail_gaya.html
+++ b/detail/detail_gaya.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <img
-      src="jurnal.jpg"
+      src="aset/jurnal.jpg"
       alt="Cover Artikel"
       style="width: 100%; height: auto"
     />
@@ -14,7 +14,7 @@
       <h1>Mengembangkan Gaya Menulis Sendiri</h1>
       <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
       <img
-        src="foto.jpg"
+        src="aset/foto.jpg"
         alt="Foto Author"
         width="70"
         height="70"
@@ -73,12 +73,12 @@
 
       <h3>Komentar Pembaca</h3>
       <p>
-        <img src="anonim.jpg" alt="User 7" width="40" height="40" /><br />
+        <img src="aset/anonim.jpg" alt="User 7" width="40" height="40" /><br />
         <strong>Dewi</strong><br />
         Saya jadi lebih percaya diri untuk menulis dengan gaya sendiri.
       </p>
       <p>
-        <img src="alim.png" alt="User 8" width="40" height="40" /><br />
+        <img src="aset/alim.png" alt="User 8" width="40" height="40" /><br />
         <strong>Raka</strong><br />
         Artikel ini membuka mata saya tentang pentingnya eksplorasi gaya.
       </p>
