--- a/detail/detail_ide.html
+++ b/detail/detail_ide.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <img
-      src="buku dan mawar.jpg"
+      src="aset/buku dan mawar.jpg"
       alt="Cover Artikel"
       style="width: 100%; height: auto"
     />
@@ -14,7 +14,7 @@
       <h1>Kiat Menemukan Ide Tulisan</h1>
       <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
       <img
-        src="foto.jpg"
+        src="aset/foto.jpg"
         alt="Foto Author"
         width="70"
         height="70"
@@ -82,13 +82,13 @@
       <h3>Komentar Pembaca</h3>
 
       <p>
-        <img src="anonim.jpg" alt="User 1" width="40" height="40" /><br />
+        <img src="aset/anonim.jpg" alt="User 1" width="40" height="40" /><br />
         <strong>Andi</strong><br />
         Artikel ini sangat membantu, terutama tips membawa catatan kecil!
       </p>
 
       <p>
-        <img src="anonim.jpg" alt="User 2" width="40" height="40" /><br />
+        <img src="aset/anonim.jpg" alt="User 2" width="40" height="40" /><br />
         <strong>Sinta</strong><br />
         Saya setuju, membaca memang bisa jadi sumber ide tak terbatas.
       </p>
