--- a/detail/detail_konsistensi.html
+++ b/detail/detail_konsistensi.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <img
-      src="buku di kasur.jpg"
+      src="aset/buku di kasur.jpg"
       alt="Cover Artikel"
       style="width: 100%; height: auto"
     />
@@ -14,7 +14,7 @@
       <h1>Menulis dengan Konsistensi</h1>
       <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
       <img
-        src="foto.jpg"
+        src="aset/foto.jpg"
         alt="Foto Author"
         width="70"
         height="70"
@@ -72,13 +72,13 @@
 
       <h3>Komentar Pembaca</h3>
       <p>
-        <img src="badut.jpg" alt="User 5" width="40" height="40" /><br />
+        <img src="aset/badut.jpg" alt="User 5" width="40" height="40" /><br />
         <strong>Rian</strong><br />
         Saya akan coba menulis tiap pagi, terima kasih inspirasinya!
       </p>
       <p>
         <img
-          src="anon berkacamata.jpg"
+          src="aset/anon berkacamata.jpg"
           alt="User 6"
           width="40"
           height="40"
