--- a/detail/detail_writer_block.html
+++ b/detail/detail_writer_block.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <img
-      src="buku pohon.jpg"
+      src="aset/buku pohon.jpg"
       alt="Cover Artikel"
       style="width: 100%; height: auto"
     />
@@ -14,7 +14,7 @@
       <h1>Cara Mengatasi Writer's Block</h1>
       <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
       <img
-        src="foto.jpg"
+        src="aset/foto.jpg"
         alt="Foto Author"
         width="70"
         height="70"
@@ -70,12 +70,12 @@
 
       <h3>Komentar Pembaca</h3>
       <p>
-        <img src="cowok.png" alt="User 3" width="40" height="40" /><br />
+        <img src="aset/cowok.png" alt="User 3" width="40" height="40" /><br />
         <strong>Budi</strong><br />
         Saya sering mengalami writer’s block, tips ini sangat membantu.
       </p>
       <p>
-        <img src="inon.jpg" alt="User 4" width="40" height="40" /><br />
+        <img src="aset/inon.jpg" alt="User 4" width="40" height="40" /><br />
         <strong>Phainon</strong><br />
         love you
       </p>
