--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
       <h2>Tentang Penulis</h2>
       <img
-        src="foto.jpg"
+        src="aset/aset/foto.jpg"
         alt="Foto Author"
         width="100"
         height="100"
@@ -42,7 +42,7 @@
         <h3>Kiat Menemukan Ide Tulisan</h3>
         <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
         <img
-          src="foto.jpg"
+          src="aset/foto.jpg"
           alt="Foto Penulis"
           width="50"
           height="50"
@@ -62,7 +62,7 @@
         <h3>Cara Mengatasi Writer's Block</h3>
         <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
         <img
-          src="foto.jpg"
+          src="aset/foto.jpg"
           alt="Foto Penulis"
           width="50"
           height="50"
@@ -81,7 +81,7 @@
         <h3>Menulis dengan Konsistensi</h3>
         <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
         <img
-          src="foto.jpg"
+          src="aset/foto.jpg"
           alt="Foto Penulis"
           width="50"
           height="50"
@@ -100,7 +100,7 @@
         <h3>Mengembangkan Gaya Menulis Sendiri</h3>
         <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
         <img
-          src="foto.jpg"
+          src="aset/foto.jpg"
           alt="Foto Penulis"
           width="50"
           height="50"
@@ -119,7 +119,7 @@
         <h3>Membangun Kebiasaan Membaca untuk Menulis Lebih Baik</h3>
         <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
         <img
-          src="foto.jpg"
+          src="aset/foto.jpg"
           alt="Foto Penulis"
           width="50"
           height="50"
