--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Header -->
     <header>
       <h1>Blog Pribadi</h1>
-      <img src="cover.jpg" alt="Plaza" width="auto" height="auto" />
+      <img src="aset/cover.jpg" alt="Plaza" width="auto" height="auto" />
 
       <!-- Navigasi -->
       <nav>
