--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
       <h2>Tentang Penulis</h2>
       <img
-        src="aset/aset/foto.jpg"
+        src="aset/foto.jpg"
         alt="Foto Author"
         width="100"
         height="100"
