--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
     <!-- Bagian Profil -->
     <h1>Curriculum Vitae</h1>
     <img
-      src="aset/aset/foto.jpg"
+      src="aset/foto.jpg"
       alt="Foto Author"
       width="150"
       height="150"
