--- a/detail/detail_baca.html
+++ b/detail/detail_baca.html
@@ -5,7 +5,11 @@
     <title>Membangun Kebiasaan Membaca untuk Menulis Lebih Baik</title>
   </head>
   <body>
-    <img src="OIP.jpg" alt="Cover Artikel" style="width: 100%; height: auto" />
+    <img
+      src="aset/OIP.jpg"
+      alt="Cover Artikel"
+      style="width: 100%; height: auto"
+    />
     <header>
       <h1>Membangun Kebiasaan Membaca untuk Menulis Lebih Baik</h1>
       <p><em>Oleh Yuri Pakpahan | 3 September 2025</em></p>
@@ -69,12 +73,12 @@
 
       <h3>Komentar Pembaca</h3>
       <p>
-        <img src="badut.jpg" alt="User 9" width="40" height="40" /><br />
+        <img src="aset/badut.jpg" alt="User 9" width="40" height="40" /><br />
         <strong>Tono</strong><br />
         Saya jadi lebih semangat membaca buku setelah membaca artikel ini.
       </p>
       <p>
-        <img src="jurnal.jpg" alt="User 10" width="40" height="40" /><br />
+        <img src="aset/jurnal.jpg" alt="User 10" width="40" height="40" /><br />
         <strong>Maya</strong><br />
         Benar sekali, membaca sangat membantu memperkaya tulisan kita.
       </p>
