--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           pengalaman pribadi. Artikel ini membahas berbagai sumber ide yang bisa
           dimanfaatkan.
         </p>
-        <p><a href="detail_ide.html">Baca Selengkapnya</a></p>
+        <p><a href="detail/detail_ide.html">Baca Selengkapnya</a></p>
       </article>
       <hr />
 
@@ -73,7 +73,7 @@
           menuangkan ide. Artikel ini berbagi pengalaman pribadi dan tips
           praktis untuk keluar dari kebuntuan menulis.
         </p>
-        <p><a href="detail_writer_block.html">Baca Selengkapnya</a></p>
+        <p><a href="detail/detail_writer_block.html">Baca Selengkapnya</a></p>
       </article>
       <hr />
 
@@ -92,7 +92,7 @@
           bagaimana membangun kebiasaan menulis yang berkelanjutan sehingga
           menulis bisa menjadi bagian dari rutinitas sehari-hari.
         </p>
-        <p><a href="detail_konsistensi.html">Baca Selengkapnya</a></p>
+        <p><a href="detail/detail_konsistensi.html">Baca Selengkapnya</a></p>
       </article>
       <hr />
 
@@ -111,7 +111,7 @@
           menemukan dan mengasah gaya menulis pribadi agar lebih autentik dan
           mudah dikenali pembaca.
         </p>
-        <p><a href="detail_gaya.html">Baca Selengkapnya</a></p>
+        <p><a href="detail/detail_gaya.html">Baca Selengkapnya</a></p>
       </article>
       <hr />
 
@@ -130,7 +130,7 @@
           membagikan kiat membangun kebiasaan membaca yang konsisten agar
           tulisan semakin kaya dan mendalam.
         </p>
-        <p><a href="detail_baca.html">Baca Selengkapnya</a></p>
+        <p><a href="detail/detail_baca.html">Baca Selengkapnya</a></p>
       </article>
     </main>
 
